# Cpp_Project_Updater

./: CMakeLists.txt  README.md  file_structure.txt  replace_and_restart.bat
include/: build_system.hpp  config.hpp  updater.hpp
src/: main.cpp
